tests/snapshots/yaml_suite_snapshots__yaml_suite_65WH_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Single Entry Block Sequence
  from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/sequence.tml"
  tags: sequence
  yaml: "- foo\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :foo\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"foo\"\n]\n"
