tests/snapshots/yaml_suite_snapshots__yaml_suite_65WH_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/sequence.tml"
  json: "[\n  \"foo\"\n]\n"
  name: Single Entry Block Sequence
  tags: sequence
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :foo\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- foo\n"
