tests/snapshots/yaml_suite_snapshots__yaml_suite_6BCT_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 6.3. Separation Spaces
  from: "http://www.yaml.org/spec/1.2/spec.html#id2778394"
  tags: spec libyaml-err sequence whitespace upto-1.2
  yaml: "- foo:—» bar\n- - baz\n  -»baz\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    =VAL :foo\n    =VAL :bar\n   -MAP\n   +SEQ\n    =VAL :baz\n    =VAL :baz\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"foo\": \"bar\"\n  },\n  [\n    \"baz\",\n    \"baz\"\n  ]\n]\n"
  dump: "- foo: bar\n- - baz\n  - baz\n"
