tests/snapshots/yaml_suite_snapshots__yaml_suite_6CA3_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Tab indented top flow
  from: "@ingydotnet"
  tags: indent whitespace
  yaml: "————»[\n————»]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n  -SEQ\n -DOC\n-STR\n"
  json: "[]\n"
  emit: "--- []\n"
