tests/snapshots/yaml_suite_snapshots__yaml_suite_6CA3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- emit: "--- []\n"
  from: "@ingydotnet"
  json: "[]\n"
  name: Tab indented top flow
  tags: indent whitespace
  tree: "+STR\n +DOC\n  +SEQ []\n  -SEQ\n -DOC\n-STR\n"
  yaml: "————»[\n————»]\n"
